objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Course_URL__c</fullName>
        <label>Course URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Course_name__c</fullName>
        <label>Course name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_number__c</fullName>
        <label>Course number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_type__c</fullName>
        <label>Course type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>ENG</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Formula_1__c</fullName>
        <formula>Course_name__c  &amp; '' &amp;  Course_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <label>Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof__c</fullName>
        <label>Prof</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>id_15_digit__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id 15 digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>id 18 digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numtoText__c</fullName>
        <formula>TEXT( Fee__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>numtoText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rich_text__c</fullName>
        <label>rich text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>text_area__c</fullName>
        <label>text area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>today_day__c</fullName>
        <formula>DAY( TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>today day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Course</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>test2</fullName>
        <active>true</active>
        <label>test2</label>
    </recordTypes>
    <recordTypes>
        <fullName>test_type</fullName>
        <active>true</active>
        <label>test type</label>
    </recordTypes>
    <validationRules>
        <fullName>Course_Fee</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Course_type__c,"CE"), Fee__c &lt;3000 )</errorConditionFormula>
        <errorMessage>fee must be more than 3000$</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>make_fields_as_req</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Email__c )</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>email field is req so u cant leave it blank</errorMessage>
    </validationRules>
</CustomObject>